[project]
name = "nomemory"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pgvector>=0.2.5",
  "httpx>=0.27",
]

[tool.uvicorn]
factory = false
